# Teammer

./: README.md
services/authentication/: pyproject.toml
services/authentication/src/: main.py
services/authentication/src/core/: config.py
services/authentication/src/models/: credentials.py
