[tool.poetry]
name = "authentication"
version = "0.1.0"
description = ""
authors = ["0xBLCKLPTN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.9"
fastapi = "^0.98.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
